# ChangeLog for app-text/docbook-sgml-utils
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/docbook-sgml-utils/ChangeLog,v 1.34 2005/01/17 00:48:39 vapier Exp $

  16 Jan 2005; Mike Frysinger <vapier@gentoo.org>
  docbook-sgml-utils-0.6.12-r2.ebuild, docbook-sgml-utils-0.6.12.ebuild,
  docbook-sgml-utils-0.6.14.ebuild:
  Add sys-apps/which to DEPEND because the jw wrapper needs it. In a stage2 ->
  stage3 scenario, we have to make sure it has been installed #76776.

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  03 Dec 2004; Mamoru KOMACHI <usata@gentoo.org>
  docbook-sgml-utils-0.6.14.ebuild:
  Removed links from txt backend; bug #72604.

  15 Nov 2004; Mamoru KOMACHI <usata@gentoo.org>
  docbook-sgml-utils-0.6.12-r2.ebuild, docbook-sgml-utils-0.6.14.ebuild:
  Fixed docbook-xml-simple-dtd dependency; bug #71046.

  19 Oct 2004; Mamoru KOMACHI <usata@gentoo.org>
  docbook-sgml-utils-0.6.12-r2.ebuild, docbook-sgml-utils-0.6.12.ebuild,
  docbook-sgml-utils-0.6.14.ebuild:
  Fixed missing dependencies; bug #68021.

  22 Sep 2004; Aron Griffis <agriffis@gentoo.org>
  docbook-sgml-utils-0.6.12-r2.ebuild, docbook-sgml-utils-0.6.12.ebuild,
  docbook-sgml-utils-0.6.14.ebuild:
  Move patching to src_unpack and use portage's default src_compile

*docbook-sgml-utils-0.6.14 (04 Sep 2004)

  04 Sep 2004; Mamoru KOMACHI <usata@gentoo.org>
  -docbook-sgml-utils-0.6.11-r2.ebuild, docbook-sgml-utils-0.6.12-r2.ebuild,
  +docbook-sgml-utils-0.6.14.ebuild:
  Version bumped. Added w3m and elinks support (bug #35166) and removed
  docbook2pdf if USE="-tetex" (bug #61938).

  02 Jul 2004; Tom Gall <tgall@gentoo.org> docbook-sgml-utils-0.6.12-r2.ebuild:
  stable on ppc64, bug #54799

  12 May 2004; Bryan Østergaard <kloeri@gentoo.org>
  docbook-sgml-utils-0.6.12-r2.ebuild:
  Stable on alpha.

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org>