@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/docbook-sgml-utils/docbook-sgml-utils-0.6.12-r2.ebuild,v 1.15 2005/01/17 00:48:39 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/docbook-sgml-utils/docbook-sgml-utils-0.6.12-r2.ebuild,v 1.16 2005/03/14 17:21:21 seemant Exp $
 
 inherit eutils
 
@@ -30,7 +30,7 @@ DEPEND=">=dev-lang/perl-5
 	~app-text/docbook-sgml-dtd-4.1
 	tetex? ( app-text/jadetex )
 	sys-apps/which
-	|| ( net-www/lynx net-www/links virtual/w3m )"
+	|| ( net-www/lynx www-client/links virtual/w3m )"
 
 # including both xml-simple-dtd 4.1.2.4 and 1.0, to ease
 # transition to simple-dtd 1.0, <obz@gentoo.org>
